# amida

./: Cargo.toml  README.md  materials.ron  paletteload-example.ron  room-palette.ron
env/: default.tiff  desert.tiff  golden.tiff  night.tiff  sunset.tiff  vertical.tiff
settings/: branch2.ron  cheap.ron  cheap256.ron  default.ron  dpi2.ron  example.ron  size256.ron  test.ron
src/: cascade.rs  color.rs  data.rs  lib.rs  main.rs  radiance.rs  scene.rs  trace.rs  utils.rs  world.rs
src/radiance/: bilinear_fix.rs  bilinear_fix_sep.rs  diagonal.rs  full_stochastic.rs  nearest.rs  single_stochastic.rs  single_stochastic_preaverage.rs
