[package]
name = "amida"
version = "1.2.0"
edition = "2021"
default-run = "amida"

[dependencies]
csscolorparser = "0.7.0"
glam = { version = "0.27.0", features = ["serde"] }
image = "0.25.2"
ron = "0.8.1"
sefirot = { path = "../sefirot/sefirot", features = ["glam"] }
sefirot_testbed = { path = "../sefirot/testbed" }
serde = "1.0.210"
tiff = "0.9.1"
winit = { version = "0.29.15", features = ["serde"] }


[features]
default = ["block64"]
record = ["sefirot_testbed/video"]
trace = ["sefirot/trace"]
block16 = []
block64 = []
