[package]
name = "amida"
version = "1.2.1"
edition = "2021"
default-run = "amida"

[dependencies]
csscolorparser = "0.7.0"
glam = { version = "0.30.0", features = ["serde"] }
image = "0.25.2"
palette = "0.7.6"
ron = "0.8.1"
keter = { path = "../sefirot/keter", features = ["glam"] }
keter_testbed = { path = "../sefirot/testbed" }
serde = "1.0.210"
tiff = "0.9.1"
winit = { version = "0.30.9", features = ["serde"] }


[features]
default = ["block64", "trace"]
record = ["keter_testbed/video"]
trace = ["keter/trace"]
block16 = []
block64 = []
